2013-07-23 Type-Tiny version 0.020 released!

 - Support for Perl 5.6.x.

2013-08-06 Type-Tiny version 0.022 released!

 - Strict comparison methods in Type::Tiny.
 - Improved compatibility with Moose attribute native traits.

2013-08-27 Type-Tiny version 0.024 released!

 - Improved compatibility between Types::Standard and Moose built-in type
   constraints.
 - Better MooseX::Types/MouseX::Type integration.

2013-09-05 Type-Tiny version 0.026 released!

 - Type::Params now provides a multisig() function.
 - Cleaned up and documented the internals of Exporter::TypeTiny; this module
   is likely to be split out as a separate CPAN distribution in the near
   future.
 - Type-Tiny is now packaged using Dist::Inkt.
 - Various bugfixes.